--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "require-directory": "^2.1.1"
   },
