feat: added forgot password router

--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.6",
     "http-status-codes": "^2.1.4",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.17",
+    "path": "^0.12.7",
     "require-directory": "^2.1.1"
   },
   "devDependencies": {
